uploaded the solved exercises

--- a/notebooks/exercises/for_loops_exercise.ipynb
+++ b/notebooks/exercises/for_loops_exercise.ipynb
@@ -10,21 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "words = ['PYTHON', 'JOHN', 'chEEse', 'hAm', 'DOE', '123']\n",
     "upper_case_words = []\n",
     "\n",
-    "for ____ in words:\n",
-    "    if ____.isupper():\n",
-    "        ____.append(____)"
+    "for word in words:\n",
+    "    if word.isupper():\n",
+    "        upper_case_words.append(word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "editable": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "editable": false
    },
@@ -54,17 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your implementation\n",
-    "sum_of_values =     "
+    "sum_of_values = 0\n",
+    "for value in magic_dict.values():\n",
+    "    if isinstance(value, (float, int)) == True:\n",
+    "        sum_of_values += value\n",
+    "print(sum_of_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "editable": false
    },
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "editable": false
    },
@@ -98,17 +109,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['odd', 'odd', 'even', 'even', 'odd', 'five even', 'five even', 'five odd']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your implementation\n",
-    "my_list = "
+    "my_list = []\n",
+    "for number in numbers:\n",
+    "    if number % 5 == 0 and number % 2 != 0:\n",
+    "        my_list.append('five odd')\n",
+    "    elif number % 5 == 0 and number % 2 == 0:\n",
+    "        my_list.append('five even')\n",
+    "    elif number % 2 != 0:\n",
+    "        my_list.append('odd')\n",
+    "    elif number % 2 == 0:\n",
+    "        my_list.append('even')\n",
+    "my_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "editable": false
    },
@@ -134,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
