--- a/notebooks/exercises/dictionaries_exercise.ipynb
+++ b/notebooks/exercises/dictionaries_exercise.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": false
    },
@@ -25,17 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'John Doe', 'age': 82, 'hobbies': ['Python', 'gym']}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your implementation\n",
-    "my_dict = "
+    "my_dict = {'name': first_name + ' ' + last_name , 'age': age, 'hobbies': [favorite_hobby, sports_hobby]}\n",
+    "my_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "editable": false
    },
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "editable": false
    },
@@ -72,18 +84,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'secret'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 'Your impelementation'\n",
-    "my_dict = \n",
-    "special_value = "
+    "my_dict = dict(dict1 | dict2 | dict3)\n",
+    "special_value = my_dict.pop('special_key')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "editable": false
    },
@@ -119,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
