--- a/notebooks/exercises/numbers_exercise.ipynb
+++ b/notebooks/exercises/numbers_exercise.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": false
    },
@@ -27,17 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your formula here:\n",
-    "result = "
+    "result = 6*(a**3) - (8*(b**2))/(4*c) + 11\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "editable": false
    },
@@ -57,11 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0.3')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your solution here\n",
+    "from decimal import Decimal\n",
+    "Decimal('0.1') + Decimal('0.2')\n",
     "\n",
     "# This won't work:\n",
     "# assert 0.1 + 0.2 == 0.3"
@@ -84,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
