--- a/notebooks/exercises/pandas_intro_exercise.ipynb
+++ b/notebooks/exercises/pandas_intro_exercise.ipynb
@@ -24,11 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "aa449dc1-4c0b-47ce-bba7-061568590d97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('/Users/vlados/Documents/Uni/Data Science /data-science-project/data-science-project/notebooks/exercises/data/2019_Yellow_Taxi_Trip_Data.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,11 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f4e7275f-4009-4cc9-911d-da92efb79fdd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 18)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,11 +76,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8577fc58-fd5f-412b-aa2e-50c541c5778b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>total_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>15.106313</td>\n",
+       "      <td>2.634494</td>\n",
+       "      <td>0.623447</td>\n",
+       "      <td>22.564659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.954762</td>\n",
+       "      <td>3.409800</td>\n",
+       "      <td>6.437507</td>\n",
+       "      <td>19.209255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-52.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-6.120000</td>\n",
+       "      <td>-65.920000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>16.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22.880000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>176.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>612.000000</td>\n",
+       "      <td>671.800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        fare_amount    tip_amount  tolls_amount  total_amount\n",
+       "count  10000.000000  10000.000000  10000.000000  10000.000000\n",
+       "mean      15.106313      2.634494      0.623447     22.564659\n",
+       "std       13.954762      3.409800      6.437507     19.209255\n",
+       "min      -52.000000      0.000000     -6.120000    -65.920000\n",
+       "25%        7.000000      0.000000      0.000000     12.375000\n",
+       "50%       10.000000      2.000000      0.000000     16.300000\n",
+       "75%       16.000000      3.250000      0.000000     22.880000\n",
+       "max      176.000000     43.000000    612.000000    671.800000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['fare_amount', 'tip_amount', 'tolls_amount', 'total_amount']].describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,11 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "dc75ecfc-19b5-438b-b078-eaf7cfc3e7f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      fare_amount  tip_amount  tolls_amount  total_amount\n",
+      "8338        176.0       18.29          6.12        201.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "longest = data[data['trip_distance'] == data['trip_distance'].max()]\n",
+    "print(longest.loc[:, ['fare_amount', 'tip_amount', 'tolls_amount', 'total_amount']])"
+   ]
   }
  ],
  "metadata": {
@@ -102,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
