--- a/notebooks/exercises/data_preprocessing_excercise.ipynb
+++ b/notebooks/exercises/data_preprocessing_excercise.ipynb
@@ -12,18 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "id": "45c600b8-fd95-4dd0-ac75-47af19a4aac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df = #"
+    "import pandas as pd\n",
+    "df = pd.read_csv('/Users/vlados/Documents/Uni/Data Science /data-science-project/data-science-project/notebooks/exercises/data/Meteorite_Landings.csv')\n",
+    "df.head()\n",
+    "df = df.rename(columns = {'mass (g)':'mass'})\n",
+    "df = df.drop(columns = ['reclat', 'reclong'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "a297b594-b654-4fd1-b560-01b44e918c1e",
    "metadata": {},
    "outputs": [],
@@ -47,23 +50,161 @@
     "\n",
     "###### **Hint 2**: Make sure to sort the index before using `loc[]` to select the range.\n",
     "\n",
-    "###### **Bonus**: There's a data entry error in the `year` column. Can you find it? (Don't spend too much time on this.)"
+    "###### **Bonus**: There's a data entry error in the `year` column. Can you find it? (Don't spend too much time on this.) "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "72a617c1-2eee-496e-ad86-d01d338cb98b",
+   "metadata": {},
+   "source": [
+    "There are several dates that fall outside pandas Timeseries range, which is why we get an error when transforming our data to_datetime()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 92,
    "id": "9a28d9c5-6be4-4213-ac13-03b6253b1736",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>mass (g)</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>year</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>GeoLocation</th>\n",
+       "      <th>fall_before_1970</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10036</th>\n",
+       "      <td>Enigma</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>Found</td>\n",
+       "      <td>1967.0</td>\n",
+       "      <td>31.33333</td>\n",
+       "      <td>-82.31667</td>\n",
+       "      <td>(31.33333, -82.31667)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10037</th>\n",
+       "      <td>Enon</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Iron, ungrouped</td>\n",
+       "      <td>763.0</td>\n",
+       "      <td>Found</td>\n",
+       "      <td>1883.0</td>\n",
+       "      <td>39.86667</td>\n",
+       "      <td>-83.95000</td>\n",
+       "      <td>(39.86667, -83.95)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10038</th>\n",
+       "      <td>Enshi</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H5</td>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>30.30000</td>\n",
+       "      <td>109.50000</td>\n",
+       "      <td>(30.3, 109.5)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10039</th>\n",
+       "      <td>Ensisheim</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>LL6</td>\n",
+       "      <td>127000.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1491.0</td>\n",
+       "      <td>47.86667</td>\n",
+       "      <td>7.35000</td>\n",
+       "      <td>(47.86667, 7.35)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name nametype         recclass  mass (g)   fall    year    reclat  \\\n",
+       "id                                                                              \n",
+       "10036     Enigma    Valid               H4      94.0  Found  1967.0  31.33333   \n",
+       "10037       Enon    Valid  Iron, ungrouped     763.0  Found  1883.0  39.86667   \n",
+       "10038      Enshi    Valid               H5    8000.0   Fell  1974.0  30.30000   \n",
+       "10039  Ensisheim    Valid              LL6  127000.0   Fell  1491.0  47.86667   \n",
+       "\n",
+       "         reclong            GeoLocation  fall_before_1970  \n",
+       "id                                                         \n",
+       "10036  -82.31667  (31.33333, -82.31667)                 1  \n",
+       "10037  -83.95000     (39.86667, -83.95)                 1  \n",
+       "10038  109.50000          (30.3, 109.5)                 0  \n",
+       "10039    7.35000       (47.86667, 7.35)                 1  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = # \n",
-    "subset = #"
+    "df = pd.read_csv('/Users/vlados/Documents/Uni/Data Science /data-science-project/data-science-project/notebooks/exercises/data/Meteorite_Landings.csv')\n",
+    "df['year'] = df['year'].str.slice(6, 10)\n",
+    "df['year'] = df['year'].astype(float)\n",
+    "df['fall_before_1970'] = [1 if df['year'][i] < 1970 else 0 for i in range(len(df['year']))]\n",
+    "df = df.set_index(\"id\")\n",
+    "df = df.sort_index()\n",
+    "subset = df.loc[10036:10040]\n",
+    "subset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 93,
    "id": "e5469d51-17df-41a7-a320-0811593ae80e",
    "metadata": {},
    "outputs": [],
@@ -90,23 +231,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "id": "c4f3be8c-1839-44f6-a57f-9566269c66a7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "df = #\n",
+    "df = pd.read_csv('/Users/vlados/Documents/Uni/Data Science /data-science-project/data-science-project/notebooks/exercises/data/Meteorite_Landings.csv')\n",
+    "df = df.rename(columns = {'mass (g)': 'mass'})\n",
+    "df = df.assign(\n",
+    "    year = lambda x: pd.to_numeric(x.year.str.slice(6,10)),\n",
+    "    before1970 = lambda x: x.year < 1970,\n",
+    "    mass = lambda x: x.mass.fillna(0)\n",
+    ")\n",
+    "#df.mass = df.mass.fillna(0)\n",
     "\n",
-    "df_pivoted = #"
+    "df_pivoted = df[(df.year >= 2005) & (df.year <= 2009)].pivot_table(\n",
+    "    index='year', values='mass', aggfunc=['count', lambda x:np.percentile(x,95)]\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "2ae9c497-4fc7-4598-b7de-0d3b6bfd0b2a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "assert df_pivoted.loc[2006][0] == 2456\n",
@@ -130,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
